--- a/package.json
+++ b/package.json
@@ -25,8 +25,5 @@
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
-  "dependencies": {
-    "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.7.1"
-  }
+  "dependencies": {}
 }
